--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - Start Bootstrap Theme</title>
+  <title>Dragos Voda - CV</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/resume.min.css" rel="stylesheet">
+  <link href="css/resume.css" rel="stylesheet">
 
 </head>
 
@@ -27,7 +27,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Clarence Taylor</span>
+      <span class="d-block d-lg-none">Dragos Voda</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
@@ -50,11 +50,11 @@
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+          <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </nav>
@@ -63,25 +63,27 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">NAME
-          <span class="text-primary">SurNAME</span>
+        <h1 class="mb-0">Dragos
+          <span class="text-primary">Voda</span>
         </h1>
-        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-          <a href="mailto:name@email.com">name@email.com</a>
+        <div class="subheading mb-5">Dublin · (353) 892 433 271 ·
+          <a href="mailto:v.dragoss@gmail.com">v.dragoss@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5" align="justify">Aalto University graduate with a background in Communications
+          Engineering and Telecommunications, having experience in Software Engineering and
+          Data Analysis as well as a good understanding of the Software Development processes.</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/vdragoss/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/vdragoss">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
+          <!-- <a href="#">
             <i class="fab fa-twitter"></i>
           </a>
           <a href="#">
-            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-facebook-f"></i> -->
           </a>
         </div>
       </div>
@@ -95,45 +97,61 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Research Fellow</h3>
+            <div class="subheading mb-3">University of Victoria</div>
+            <p align="justify">As part of the <a href="https://thesegalgroup.org/">SEGAL</a> research group, I conducted a research project on techniques
+              for improving on-time delivery of software components by cross-referencing their
+              delivery status with participating developers discussions. The investigated
+              technique consisted of a time-series clustering analysis performed on abstracted
+              conversation structures extracted from the Jazz online collaboration platform.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">January 2018 - August 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">Research Assistant</h3>
+            <div class="subheading mb-3">Aalto University</div>
+            <p align="justify">As part of a research team in the Department of Computer Science, I assisted
+              in a project looking into students’ affective learning outcomes after a Scrum
+              project. My duties consisted of scrubbing survey data, performing data
+              analysis using descriptive statistics and correlation analysis, as well as
+              exploring relevant prior research.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">June 2017 - August 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">Software Developer</h3>
+            <div class="subheading mb-3">Alcatel-Lucent (Nokia)</div>
+            <p align="justify">Developed and maintained upgrade rules utilized in the software update process
+              of telecommunications equipment. This consisted of using Python to create and
+              edit the XML files involved in parameter configuration, creating the necessary
+              unit tests using Xquery, coordinating using Jira, participating in code reviews
+              and using Jenkins to configure batch testing.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <span class="text-primary">June 2014 - August 2015</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+            <h3 class="mb-0">Junior Software Developer</h3>
+            <div class="subheading mb-3">Alcatel-Lucent (Nokia)</div>
+            <p align="justify">Extended the functionality of a software module for automatic equipment
+              configuration that was used by the sales team to generate offers for
+              telecommunications operators. I used LISP to implement formulas and
+              dependencies that automatically determined the validity of a specified
+              configuration and would output the required components.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">June 2013 - June 2014</span>
           </div>
         </div>
 
@@ -149,24 +167,30 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <a href="https://www.aalto.fi/en">
+              <h3 class="mb-0">Aalto University</h3></a>
+            <a href="https://www.aalto.fi/en/study-options/masters-programme-in-computer-communication-and-information-sciences-communications">
+              <div class="subheading mb-3">MSc in Computer, Communication and Information Sciences</div></a>
+            <div>Major: Communications Engineering</div>
+            <div>Minor: Software and Service Engineering</div>
+            <!-- <p>GPA: 3.23</p> -->
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">March 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <a href="https://www.etc.upt.ro/en/">
+              <h3 class="mb-0">Technical University of Timisoara</h3></a>
+            <a href="http://www.upt.ro/img/files/2019-2020/licenta/pi/etcti/2019_2020_ETcTI_IETTI_Anii_I-II_en.pdf">
+              <div class="subheading mb-3">BSc in Electronics Engineering and Telecommunications</div></a>
+            <div>Specialization: Telecommunication Technology and Systems</div>
+            <!-- <p>GPA: 3.56</p> -->
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">September 2014</span>
           </div>
         </div>
 
@@ -180,7 +204,13 @@
         <h2 class="mb-5">Skills</h2>
 
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
+        <div>Python, R, SQL, Bash, Pandas, Java, JSON, WEKA, XML, RegEx, Excel, Linux</div>
+        <div>Git, SVN, IBM Clearcase</div>
+        <div>Agile (Scrum, Kanban)</div>
+        <div>Docker, Jupyter Notebook, Jira, Jenkins</div>
+        <div>Data mining, cleaning and processing, Machine learning, Data visualization</div>
+
+        <!-- <ul class="list-inline dev-icons">
           <li class="list-inline-item">
             <i class="fab fa-html5"></i>
           </li>
@@ -217,9 +247,9 @@
           <li class="list-inline-item">
             <i class="fab fa-npm"></i>
           </li>
-        </ul>
+        </ul> -->
 
-        <div class="subheading mb-3">Workflow</div>
+        <!-- <div class="subheading mb-3">Workflow</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
@@ -234,22 +264,22 @@
             <i class="fa-li fa fa-check"></i>
             Agile Development &amp; Scrum</li>
         </ul>
-      </div>
+      </div> -->
     </section>
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
       <div class="w-100">
-        <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <h2 class="mb-5">Projects</h2>
+        <p>Project 1</p>
+        <p class="mb-0">Project 2</p>
       </div>
     </section>
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
@@ -281,7 +311,7 @@
             Place - James Buchanan High School - Hackathon 2005</li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
   </div>
 
