--- a/index.html
+++ b/index.html
@@ -94,20 +94,21 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
-
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Research Fellow</h3>
-            <div class="subheading mb-3">University of Victoria</div>
+            <div class="subheading mb-0">University of Victoria</div>
+            <div class="text-primary mb-3">January 2018 - August 2018</div>
+
             <p align="justify">As part of the <a href="https://thesegalgroup.org/">SEGAL</a> research group, I conducted a research project on techniques
               for improving on-time delivery of software components by cross-referencing their
               delivery status with participating developers discussions. The investigated
               technique consisted of a time-series clustering analysis performed on abstracted
               conversation structures extracted from the Jazz online collaboration platform.</p>
           </div>
-          <div class="resume-date text-md-right">
+          <!-- <div class="resume-date text-md-right">
             <span class="text-primary">January 2018 - August 2018</span>
-          </div>
+          </div> -->
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
