--- a/index.html
+++ b/index.html
@@ -97,14 +97,13 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Research Fellow</h3>
-            <div class="subheading mb-0">University of Victoria</div>
-            <div class="text-primary mb-3">January 2018 - August 2018</div>
-
-            <p align="justify">As part of the <a href="https://thesegalgroup.org/">SEGAL</a> research group, I conducted a research project on techniques
+            <div class="subheading mb-3">University of Victoria</div>
+            <p align="justify" class="mb-1">As part of the SEGAL research group, I conducted a research project on techniques
               for improving on-time delivery of software components by cross-referencing their
               delivery status with participating developers discussions. The investigated
               technique consisted of a time-series clustering analysis performed on abstracted
               conversation structures extracted from the Jazz online collaboration platform.</p>
+              <div class="text-primary">January 2018 - August 2018</div>
           </div>
           <!-- <div class="resume-date text-md-right">
             <span class="text-primary">January 2018 - August 2018</span>
@@ -115,14 +114,12 @@
           <div class="resume-content">
             <h3 class="mb-0">Research Assistant</h3>
             <div class="subheading mb-3">Aalto University</div>
-            <p align="justify">As part of a research team in the Department of Computer Science, I assisted
+            <p align="justify" class="mb-1">As part of a research team in the Department of Computer Science, I assisted
               in a project looking into students’ affective learning outcomes after a Scrum
               project. My duties consisted of scrubbing survey data, performing data
               analysis using descriptive statistics and correlation analysis, as well as
               exploring relevant prior research.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017 - August 2018</span>
+              <div class="text-primary">June 2017 - August 2018</div>
           </div>
         </div>
 
@@ -130,14 +127,12 @@
           <div class="resume-content">
             <h3 class="mb-0">Software Developer</h3>
             <div class="subheading mb-3">Alcatel-Lucent (Nokia)</div>
-            <p align="justify">Developed and maintained upgrade rules utilized in the software update process
+            <p align="justify" class="mb-1">Developed and maintained upgrade rules utilized in the software update process
               of telecommunications equipment. This consisted of using Python to create and
               edit the XML files involved in parameter configuration, creating the necessary
               unit tests using Xquery, coordinating using Jira, participating in code reviews
               and using Jenkins to configure batch testing.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2014 - August 2015</span>
+              <div class="text-primary">June 2014 - August 2015</div>
           </div>
         </div>
 
@@ -145,17 +140,14 @@
           <div class="resume-content">
             <h3 class="mb-0">Junior Software Developer</h3>
             <div class="subheading mb-3">Alcatel-Lucent (Nokia)</div>
-            <p align="justify">Extended the functionality of a software module for automatic equipment
+            <p align="justify" class="mb-1">Extended the functionality of a software module for automatic equipment
               configuration that was used by the sales team to generate offers for
               telecommunications operators. I used LISP to implement formulas and
               dependencies that automatically determined the validity of a specified
               configuration and would output the required components.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2013 - June 2014</span>
+              <div class="text-primary">June 2013 - June 2014</div>
           </div>
         </div>
-
       </div>
 
     </section>
@@ -168,30 +160,20 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <a href="https://www.aalto.fi/en">
-              <h3 class="mb-0">Aalto University</h3></a>
-            <a href="https://www.aalto.fi/en/study-options/masters-programme-in-computer-communication-and-information-sciences-communications">
-              <div class="subheading mb-3">MSc in Computer, Communication and Information Sciences</div></a>
+            <h3 class="mb-0">Aalto University</h3>
+            <div class="subheading mb-3">MSc in Computer, Communication and Information Sciences</div>
             <div>Major: Communications Engineering</div>
             <div>Minor: Software and Service Engineering</div>
-            <!-- <p>GPA: 3.23</p> -->
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019</span>
+            <div class="text-primary">March 2019</div>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <a href="https://www.etc.upt.ro/en/">
-              <h3 class="mb-0">Technical University of Timisoara</h3></a>
-            <a href="http://www.upt.ro/img/files/2019-2020/licenta/pi/etcti/2019_2020_ETcTI_IETTI_Anii_I-II_en.pdf">
-              <div class="subheading mb-3">BSc in Electronics Engineering and Telecommunications</div></a>
+            <h3 class="mb-0">Technical University of Timisoara</h3>
+            <div class="subheading mb-3">BSc in Electronics Engineering and Telecommunications</div>
             <div>Specialization: Telecommunication Technology and Systems</div>
-            <!-- <p>GPA: 3.56</p> -->
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2014</span>
+            <div class="text-primary">September 2014</div>
           </div>
         </div>
 
@@ -209,23 +191,23 @@
         <div>Git, SVN, IBM Clearcase</div>
         <div>Agile (Scrum, Kanban)</div>
         <div>Docker, Jupyter Notebook, Jira, Jenkins</div>
-        <div>Data mining, cleaning and processing, Machine learning, Data visualization</div>
+        <div>Data mining, Machine learning, Data visualization</div>
 
         <!-- <ul class="list-inline dev-icons">
           <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
+            <i class="fab fa-python"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
+            <i class="fab fa-Rstudio"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
+            <i class="fab fa-github"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
+            <i class="fab fa-Pandas"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-react"></i>
+            <i class="fab fa-xml"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-node-js"></i>
@@ -273,8 +255,18 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
       <div class="w-100">
         <h2 class="mb-5">Projects</h2>
-        <p>Project 1</p>
-        <p class="mb-0">Project 2</p>
+        <div class="subheading mb-0">
+          <a href="https://github.com/vdragoss/Python-minigame">Trapped</a></div>
+          <p class="mb-3">Built using Object Oriented Programming principles, the game places the
+            player in a house with the simple objective of escaping it. Each room
+            presents an unique mechanic, with several actions available, and multiple
+            ways of approaching the task.</p>
+        <div class="subheading mb-0">
+          <a href="https://github.com/vdragoss/web_scraping">Second-hand car analysis</a></div>
+          <p class="mb-3">The project implements a Scrapy web-crawler to gather vehicle data,
+            such as age, mileage and price, from a car-sales website and export
+            it to a SQL database. Pandas is then used to investigate and clean
+            the data, while Seaborn is used for visualizations.</p>
       </div>
     </section>
 
